Fix unnecessary scroll bar visible on select control (https://github.com/woocommerce/woocommerce-admin/pull/3065)

--- a/plugins/woocommerce-admin/packages/components/src/select-control/style.scss
+++ b/plugins/woocommerce-admin/packages/components/src/select-control/style.scss
@@ -109,7 +109,7 @@
 		right: 0;
 		top: 57px;
 		z-index: 10;
-		overflow: scroll;
+		overflow-y: scroll;
 		max-height: 350px;
 
 		&.is-static {
